// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component Can pass style props 1`] = `
<div
  class="
        text-input-nm 
         
        icon-false
        round-true
        color-success
        size-small
      "
  data-testid="text-input-wrapper"
>
  <label
    class="form-label"
    for="id"
  >
    Label
  </label>
  <div
    class="text-input-container-nm"
  >
    <input
      autocomplete="off"
      data-testid="text-input"
      id="id"
      placeholder="Placeholder.."
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput Component Can render 1`] = `
<div
  class="
        text-input-nm 
         
        icon-false
        round-false
        color-primary
        size-medium
      "
  data-testid="text-input-wrapper"
>
  <label
    class="form-label"
    for="id"
  >
    Label
  </label>
  <div
    class="text-input-container-nm"
  >
    <input
      autocomplete="off"
      data-testid="text-input"
      id="id"
      placeholder="Placeholder.."
      type="text"
      value=""
    />
  </div>
</div>
`;
